# keepmenu

./: .gitignore  Makefile  README.md  README.rst  config.ini.example  flake.nix  keepmenu  keepmenu.1  keepmenu.1.md  ops  passmenu  pyproject.toml  requirements.txt  root  setup.py  version
.github/workflows/: main.yml
docs/: configure.md  install.md  usage.md
keepmenu/: __init__.py  __main__.py  edit.py  keepmenu.py  menu.py  run_once.py  tokens_dotool.py  tokens_pynput.py  tokens_wtype.py  tokens_xdotool.py  tokens_ydotool.py  totp.py  type.py  view.py
tests/: keepmenu-config.ini  test.kdbx  tests.py
